content/nomad/v0.11.x/content/docs/commands/job/periodic-force.mdx
---
layout: docs
page_title: 'Commands: job periodic force'
sidebar_title: periodic force
description: >
  The job periodic force command is used to force the evaluation of a periodic
  job.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2021-11-15T00:00:00.000Z
last_modified: 2021-11-15T00:00:00.000Z
# END AUTO GENERATED METADATA
---

# Command: job periodic force

The `job periodic force` command is used to [force the evaluation] of a
[periodic job].

## Usage

```plaintext
nomad job periodic force [options] <job id>
```

The `job periodic force` command requires a single argument, specifying the ID
of the job. This job must be a periodic job. This is used to immediately run a
periodic job, even if it violates the job's `prohibit_overlap` setting.

By default, on successful job submission the command will enter an interactive
monitor and display log information detailing the scheduling decisions and
placement information for the forced evaluation. The monitor will exit after
scheduling has finished or failed.

## General Options

@include 'general_options.mdx'

## Run Options

- `-detach`: Return immediately instead of monitoring. A new evaluation ID
  will be output, which can be used to examine the evaluation using the
  [eval status] command.

- `-verbose`: Show full information.

## Examples

Force the evaluation of the job `example`, monitoring placement:

```shell-session
$ nomad job periodic force example
==> Monitoring evaluation "54b2d6d9"
    Evaluation triggered by job "example/periodic-1555094493"
    Allocation "637aee17" created: node "a35ab8fc", group "cache"
    Allocation "637aee17" status changed: "pending" -> "running" (Tasks are running)
    Evaluation status changed: "pending" -> "complete"
==> Evaluation "54b2d6d9" finished with status "complete"
```

Force the evaluation of the job `example` and return immediately:

```shell-session
$ nomad job periodic force -detach example
Force periodic successful
Evaluation ID: 0865fbf3-30de-5f53-0811-821e73e63178
```

[eval status]: /docs/commands/eval-status
[force the evaluation]: /api-docs/jobs#force-new-periodic-instance
[periodic job]: /docs/job-specification/periodic
